# stock-predictions

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  MONITORING.md  Pipfile  README.md  init-db.sql  pyproject.toml  pytest.ini
api/: .env.docker  .env.example  .env.production  .gitignore  DOCKER.md  Dockerfile.dev  MONITORING.md  README.md  deploy.bat  deploy.sh  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.yml  pytest.ini  requirements.txt
api/monitoring/: prometheus.yml
api/src/: alembic.ini  config.py  database.py  main.py  telemetry.py
api/src/api/: __init__.py  discovery.py  stocks.py
api/src/migrations/versions/: 6271cbff91e8_load_nyse_data.py  f323c045cc84_load_nyse_data_2.py
api/src/ml/: __init__.py
api/src/models/: __init__.py
api/src/schemas/: discovery.py  stock.py
api/src/services/: discovery_service.py  stock_service.py
api/tests/alembic_tests/: __init__.py  base.py  conftest.py  test_f323c045cc84_load_nyse_data_2.py
nginx/: nginx.conf
src/: __init__.py  config.py  database.py  main.py  telemetry.py  telemetry_decorators.py
src/api/: stocks.py
src/migrations/versions/: 320cbd9caf97_add_nyse.py  6271cbff91e8_load_nyse_data.py
src/models/: daily.py
src/services/: __init__.py  discovery_service.py  stock_service.py
tests/: test_stocks.py
tests/alembic_tests/: test_320cbd9caf97_add_nyse.py  test_6271cbff91e8_load_nyse_data.py
ui/: README.md  env.example  package-lock.json  package.json  tailwind.config.js
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: Header.tsx  MarketSummary.tsx  SectorOverview.tsx  StockCards.tsx
