[project]
name = "stock-predictions"
version = "0.1.0"
description = ""
authors = [
    {name = "Tobi Adegunloye",email = "Oloruntobiadg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "poetry (>=2.1.1,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)"
]

[tool.poetry]
packages = []
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
